# penta-dragon-dx

./: .gitignore  .mcp.json  APPROACH.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUARANTEED_APPROACH.md  Makefile  README.md  mgba-qt.sh  monster_names_extracted.json  monster_names_extracted.txt  monster_names_list.txt  pyproject.toml
content/: Cargo.toml
content/src/: biomes.rs  classes.rs  enemies.rs  ids.rs  items.rs  lib.rs  rooms.rs
docs/: FINDINGS_2026_06_07_arena_gdma_isolation.md  FINDINGS_2026_06_08_position_sweep.md  INDEX.md  bg_tile_architecture.md  boss_arena_routines.md  d880_state_machine.md  hram_allocation_map.md  inline_hook_analysis_v300.md  inline_tile_attr_copy.md  interrupt_architecture.md  main_loop_and_entry.md  projectile_tile_mapping.md  rst_and_boot.md  v301_performance.md  v301_regression_stage_load_stuck.md  v301_resolved_issues.md  wram_allocation_map.md
palettes/: bg_tile_categories.yaml  monster_palette_map.yaml  monster_palettes.yaml  penta_palettes.yaml  penta_palettes_v097.yaml
reverse_engineering/: penta_dragon_architecture.md
rl/: .gitignore  RESULTS.md  SESSION_SUMMARY_2026-05-06.md  eval_v19_generalize.py  godmode_autoplay.py  launch_v15.sh  ppo_pentadragon.pt  ppo_pentadragon_metrics.json  ppo_pentadragon_vec.pt  ppo_pentadragon_vec_metrics.json  probe_boss_death.py  smoke_results.json  train_demo_curriculum.py  train_explore_natural.py  train_shalamar.py  train_shalamar_np.py
save_states_for_claude/: banner_native_d880_1b.ss0  death_cinematic_ffba1_native.ss0  death_cinematic_ffba2_native.ss0  death_cinematic_ffba3_native.ss0  death_cinematic_ffba4_native.ss0  death_cinematic_ffba5_native.ss0  death_cinematic_native.ss0  splash_stage1_d880_18.ss0  splash_stage7_d880_18.ss0  stage1_entry_pink_renders.ss0  stage3_ffba2_levelselect.ss0  stage4_ffba3_levelselect.ss0  stage5_ffba4_levelselect.ss0  stage6_ffba5_levelselect.ss0  stage7_ffba6_levelselect.ss0  titlemenu_colored.ss0
scripts/: analyze_sara_w_colors.py  (+83 more)
(+276 files in other folders)
